# tsgctf-platform

./: .gitignore  LICENSE  README.md  build.py  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
api/: hello.ts  init-schema.ts
api/challenges/: getAccessInfo.ts  launch.ts  poll.ts
api/crons/: consolidateTasks.ts
prisma/: schema.prisma
prisma/migrations/20231124023045_init/: migration.sql
prisma/migrations/20231124031348_init/: migration.sql
tsgctf-test-crypto/: Dockerfile  cloudformation.yml  docker-compose.yml  service.cloudformation.yml  src.rb  task.cloudformation.yml  xinetd.conf
